--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "task",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://rohitjha941.github.io/Task/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
