--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
+    "otp-input-react": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-otp-input": "^1.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
